--- a/PaperCup/Properties/Resources.resx
+++ b/PaperCup/Properties/Resources.resx
@@ -121,10 +121,34 @@
   <data name="connecting icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\connecting icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="createRoom1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\createRoom1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="connecting icon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\connecting icon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="joinRoom" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\joinRoom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="createRoom2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\createRoom2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icon-ios7-gear-128" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon-ios7-gear-128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="createRoom11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\createRoom11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="createRoom" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\createRoom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="joinRoom1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\joinRoom1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="button1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
